--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# ignore rspec configuration files
+.rspec
+.rspec_status
