--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,8 @@ before_install:
   - "./cc-test-reporter before-build"
 after_script:
   - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+deploy:
+  provider: rubygems
+  api_key: $RUBY_GEMS_API_KEY
+  on:
+    tags: true
