fix for rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,8 @@
 AllCops:
   Exclude:
     - bin/**/*
+    - vendor/bundle/**/*
+  TargetRubyVersion: 2.5
 Metrics/BlockLength:
   Exclude:
     - '*.gemspec'
