simplify branch regex

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ rvm:
 branches:
   only:
     - master
-    - /.*-alpha/
-    - /.*-beta/
-    - /.*-stable/
+    - /.*-(alpha|beta|stable)/
 before_install:
   - gem install bundler -v 1.17.3
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
