--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -42,7 +42,16 @@ plugins:
   rubocop:
     enabled: true
 exclude_patterns:
-  - '.github/PULL_REQUEST_TEMPLATE.md'
-  - '.github/ISSUE_TEMPLATE/*'
+  - .github/PULL_REQUEST_TEMPLATE.md
+  - .github/ISSUE_TEMPLATE/*
+  - .mdlrc
+  - .yardopts
+  - '/bin/*'
   - '**/spec/'
   - '**/vendor/'
+  - '/.*ignore/'
+  - /Gemfile.*/
+  - '*.yml'
+  - Dockerfile
+  - Rakefile
+  - mdl_style.rb
