--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,31 +31,12 @@ jobs:
           ./cc-test-reporter before-build
       - name: Run Specs
         run: bundle exec rake spec
+      - name: Build Gem
+        run: bundle exec rake build
       - name: Reporting Coverage to Code Climate
         run: ./cc-test-reporter after-build --exit-code $?
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-    strategy:
-      matrix:
-        ruby:
-          - '2.5'
-          - '2.6'
-  build:
-    name: Building Gem for Ruby ${{ matrix.ruby }}
-    needs:
-      - test
-    if: success()
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby }}
-          architecture: x64
-      - name: Install Dependencies
-        run: gem install bundler && bundler install --jobs 20  --retry 5
-      - name: Building Gem
-        run: bundle exec rake build
     strategy:
       matrix:
         ruby:
