--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,15 +25,18 @@ jobs:
           ./cc-test-reporter before-build
       - name: Run Specs
         run: bundle exec rake spec
+      - name: Build Gem
+        run: bundle exec rake build
       - name: Reporting Coverage to Code Climate
         run: ./cc-test-reporter after-build --exit-code $!
-  build-and-publish:
-    name: Build and Publish
+  publish:
+    name: Publish
     needs:
       - test
     if: success()
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.6
