--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,7 @@ Metrics/BlockLength:
     - '*.gemspec'
     - spec/**/*_spec.rb
     - spec/support/**/*.rb
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 Style/Documentation:
   Enabled: false
