--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,6 @@ jobs:
       CODACY_RUN_LOCAL: true
       CI_NAME: github-actions
     steps:
-      - uses: managedkaos/print-env@master
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
         with:
@@ -52,7 +51,7 @@ jobs:
         run: bundle exec rake build
       - name: Report coverage to Code Climate
         run: |
-          export GIT_BRANCH=$GITHUB_HEAD_REF
+          export GIT_BRANCH=$GITHUB_REF
           export GIT_COMMIT_SHA=$GITHUB_SHA
           export CI_BUILD_ID=$GITHUB_RUN_NUMBER
           export CI_BUILD_URL="https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
