--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,13 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
       - name: Setup Coverage Reporting
-        run: curl -LSs $(curl -LSs https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | endswith(".jar"))) | .[0].browser_download_url')" -o codacy-coverage-reporter-assembly.jar
+        run: |
+          curl -Ls -o codacy-coverage-reporter "$(curl -Ls https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r '.assets | map({name, browser_download_url} | select(.name | contains("codacy-coverage-reporter-linux"))) | .[0].browser_download_url')"
+          chmod +x codacy-coverage-reporter
       - name: Rake spec
         run: bundle exec rake spec
       - name: Reporting Coverage
-        run: java -jar codacy-coverage-reporter-assembly.jar report -l Java -r coverage/lcov/activeinteractor.lcov
+        run: ./codacy-coverage-reporter report -l Java -r coverage/lcov/activeinteractor.lcov
       - name: Rake build
         run: bundle exec rake build
     strategy:
