--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Rake spec
         run: bundle exec rake spec
       - name: Reporting Coverage
-        run: ./codacy-coverage-reporter report -l Java -r coverage/lcov/activeinteractor.lcov
+        run: ./codacy-coverage-reporter report -l Java --commit-uuid ${GITHUB_SHA} -r coverage/lcov/activeinteractor.lcov
       - name: Rake build
         run: bundle exec rake build
     strategy:
