--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,13 +3,13 @@ name: Build
 on:
   pull_request:
     branches:
-      - master
+      - main
       - '*-alpha'
       - '*-beta'
       - '*-stable'
   push:
     branches:
-      - master
+      - main
       - '*-alpha'
       - '*-beta'
       - '*-stable'
