--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
-      CODACY_RUN_LOCAL: true
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
@@ -39,7 +38,9 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
       - name: Rake spec
-        run: bundle exec rake spec
+        run: |
+          bundle exec rake spec
+          bash <(curl -Ls https://coverage.codacy.com/get.sh)
       - name: Rake build
         run: bundle exec rake build
     strategy:
