--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
         run: bundle exec rake spec
       - name: Rake build
         run: bundle exec rake build
-      - uses: codacy/codacy-coverage-reporter-action@master
+      - name: Reporting Coverage
+        uses: codacy/codacy-coverage-reporter-action@master
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: coverage/lcov/activeinteractor.lcov
