#303 ensure specs are excluded from rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ AllCops:
   Exclude:
     - bin/**/*
     - vendor/bundle/**/*
+    - spec/**/*
   NewCops: enable
   TargetRubyVersion: 2.5
 Metrics/BlockLength:
