--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -39,6 +39,9 @@ plugins:
     enabled: true
   rubocop:
     enabled: true
+    channel: rubocop-1-9-1
+    config:
+      file: .rubocop-codeclimate.yml
 exclude_patterns:
   - .github/PULL_REQUEST_TEMPLATE.md
   - .github/ISSUE_TEMPLATE/*
