Update github workflows
We need to ensure github nows how to correctly build the project given the new linting flow.
Additionally we want to test ActiveInteractor against ruby 3.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-ruby@v1.1.2
+      - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
-          architecture: x64
-      - name: Bundle install
-        run: gem install bundler && bundler install --jobs 4  --retry 3
+          ruby-version: 2.5
+          bundler-cache: true
       - name: Rake specs
         run: bundle exec rake spec
       - name: Rake build
@@ -29,10 +27,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-ruby@v1.1.2
+      - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
-          architecture: x64
+          ruby-version: 2.5
+          bundler-cache: true
       - name: Publish to RubyGems
         run: |
           mkdir -p $HOME/.gem
