--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
   pull_request:
@@ -6,39 +6,51 @@ on:
       - main
       - '*-alpha'
       - '*-beta'
+      - '*-dev'
       - '*-stable'
   push:
     branches:
       - main
       - '*-alpha'
       - '*-beta'
+      - '*-dev'
       - '*-stable'
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup branch
+        uses: actions/checkout@v2
+      - name: Set up ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.5
+          bundler-cache: true
+      - name: Rubocop run
+        run: |
+          bundle exec rubocop --display-cop-names
+          bundle exec rubocop --require code_scanning --display-cop-names --format CodeScanning::SarifFormatter -o rubocop.sarif
+      - name: Upload sarif output
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: rubocop.sarif
   build:
     env:
       CC_TEST_REPORTER_ID:  ${{ secrets.CC_TEST_REPORTER_ID }}
+    if: success()
     name: Build ruby ${{ matrix.ruby }}
+    needs:
+      - lint
     runs-on: ubuntu-latest
     steps:
       - name: Setup branch
         uses: actions/checkout@v2
       - name: Setup ruby ${{ matrix.ruby }}
-        uses: actions/setup-ruby@v1.1.2
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - name: Setup cache
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      - name: Bundle install
-        run: |
-          gem install bundler
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+          bundler-cache: true
       - name: Setup coverage reporter
         env:
           GIT_BRANCH: ${{ github.ref }}
@@ -62,3 +74,4 @@ jobs:
           - '2.5'
           - '2.6'
           - '2.7'
+          - '3.0'
