--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,13 @@ updates:
       - github-actions
     reviewers:
       - aaronmallen
+  - package-ecosystem: bundler
+    directory: /
+    schedule:
+      interval: weekly
+      day: monday
+    labels:
+      - dependabot
+      - bundler
+    reviewers:
+      - aaronmallen
