--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,48 +1,18 @@
 name: Lint
 
 on:
-  pull_request:
-    branches:
-      - main
-      - '*-alpha'
-      - '*-beta'
-      - '*-stable'
-  push:
-    branches:
-      - main
-      - '*-alpha'
-      - '*-beta'
-      - '*-stable'
+  workflow_call:
 
 jobs:
   rubocop:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup branch
+      - name: Setup Branch
         uses: actions/checkout@v2
-      - name: Set up ruby
-        uses: actions/setup-ruby@v1.1.2
+      - name: Set Up Ruby
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.5
-      - name: Setup cache
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      - name: Bundle install
-        run: |
-            gem install bundler
-            bundle config path vendor/bundle
-            bundle install --jobs 4 --retry 3
-      - name: Rubocop run
-        run: |
-          bin/rubocop
-          bin/rubocop --format CodeScanning::SarifFormatter -o rubocop.sarif
-      - name: Upload sarif output
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: rubocop.sarif
-    strategy:
-      fail-fast: false
+          bundler-cache: true
+      - name: Run Rubocop
+        run: bundle exec rubocop --display-cop-names
