--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
   pull_request:
@@ -6,40 +6,52 @@ on:
       - main
       - '*-alpha'
       - '*-beta'
+      - '*-dev'
       - '*-stable'
   push:
     branches:
       - main
       - '*-alpha'
       - '*-beta'
+      - '*-dev'
       - '*-stable'
 
 jobs:
-  build:
-    env:
-      CC_TEST_REPORTER_ID:  ${{ secrets.CC_TEST_REPORTER_ID }}
-    name: Build ruby ${{ matrix.ruby }}
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup branch
+      - name: Setup Branch
         uses: actions/checkout@v2
-      - name: Setup ruby ${{ matrix.ruby }}
-        uses: actions/setup-ruby@v1.1.2
+      - name: Set Up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.5
+          bundler-cache: true
+      - name: Run Rubocop
+        run: bundle exec rubocop --display-cop-names
+  test:
+    env:
+      CC_TEST_REPORTER_ID:  ${{ secrets.CC_TEST_REPORTER_ID }}
+    name: Test ruby ${{ matrix.ruby }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Branch
+        uses: actions/checkout@v2
+
+      - name: Setup Ruby ${{ matrix.ruby }}
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - name: Setup cache
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-      - name: Bundle install
+          bundler-cache: true
+
+      - name: Skip Coverage
+        if: env.CC_TEST_REPORTER_ID == null
         run: |
-          gem install bundler
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
-      - name: Setup coverage reporter
+          echo "###########################"
+          echo "Skipping Coverage Reporting"
+          echo "###########################"
+
+      - name: Setup Coverage Reporter
         env:
           GIT_BRANCH: ${{ github.ref }}
         if: env.CC_TEST_REPORTER_ID != null
@@ -47,18 +59,48 @@ jobs:
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
           ./cc-test-reporter before-build
-      - name: Test
-        run: bundle exec rspec
-      - name: Report coverage
+
+      - name: Run Unit Tests
+        run: COVERAGE_TYPE=unit bundle exec rspec --tag \~type:integration --format documentation --order rand
+
+      - name: Run Integration Tests
+        run: COVERAGE_TYPE=integration bundle exec rspec --tag type:integration --format documentation --order rand
+
+      - name: Report Coverage
         if: env.CC_TEST_REPORTER_ID != null
         run: |
-          ./cc-test-reporter format-coverage -t lcov coverage/lcov/activeinteractor.lcov
+          ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.unit.json coverage/unit_lcov.info
+          ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.integration.json coverage/integration_lcov.info
+          ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
           ./cc-test-reporter upload-coverage
-      - name: Build gem
-        run: bundle exec rake build
+
     strategy:
       matrix:
         ruby:
           - '2.5'
           - '2.6'
           - '2.7'
+          - '3.0'
+  build:
+    name: Build Gem for Ruby {{ matrix.ruby }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Branch
+        uses: actions/checkout@v2
+
+      - name: Setup Ruby ${{ matrix.ruby }}
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+
+      - name: Build Gem
+        run: bundle exec rake build
+
+    strategy:
+      matrix:
+        ruby:
+          - '2.5'
+          - '2.6'
+          - '2.7'
+          - '3.0'
